# teuton

./: .dockerignore  .gitignore  README.md  pyproject.toml
bench/: __init__.py  _viz_demo_start.sh  auditor_worker.py  baseline_fsdp.py  dashboard.py  fineweb_fast.py  fleet.json  legacy_dist.py  legacy_fleet_pool.sh  legacy_pool.sh  lium_fleet.py  presigned_ssh_worker.py  probe_s3.py  run_s3_smoke.py  setup_fleet.sh  setup_remote.sh  sparseloco_codec.py  sparseloco_fleet.py  sparseloco_moe_validation.py  start_workers.sh  util_smoke.py  viz_demo_feed.py  viz_demo_heartbeat.py
docker/: Dockerfile  compose.auditor.yml  compose.dashboard.yml  compose.miner.yml  compose.multi-miner-4.yml  compose.multi-miner.yml  compose.smoke.yml  compose.validator.yml  compose.wt-test.yml  entrypoint.sh
docs/: dashboard.md  fleet-operations.md  mining.md  scaling-lessons.md  sdk.md  v2-architecture.md  v2-migration-inventory.md  validator.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
locus_core/: cli.py  compat.py  discovery_ui.py  ir.py  paths.py  protocol.py  visualizer.py  wallet_crypto.py
locus_legacy_v2/: __init__.py  config.py  ir.py  main.py  paths.py  storage.py  types.py  validator.py  worker.py
locus_miner/: capabilities.py  neuron.py  worker.py
locus_orchestrator/: legacy_round.py  run_manager.py  scheduler.py  streaming.py
locus_runtime/: crypto.py  discovery.py  eval.py  executor.py  grants.py  storage.py  tensor_io.py  transport.py
locus_tasks/: __init__.py  adam_mlp.py  data_parallel_mlp.py  gpt_pipe.py  legacy_mlp.py  locoprop_mlp.py  pipe_demo.py  pipe_train.py  pluralis_asymmetric.py  pluralis_demo.py  pluralis_full.py  pluralis_gpt_10M.py  pluralis_gpt_10M_v3.py  pluralis_grassmann.py  pluralis_grouped.py  pluralis_int8.py  pluralis_lossless_wire.py  pluralis_subspace.py  pluralis_tied.py  relu_mlp.py  sign_loco_mlp.py  tiny_gpt.py
locus_validator/: audit_jobs.py  ledger.py
scripts/: __init__.py  build_push.sh  check_fleet_run.py  deploy_dashboard.sh  deploy_fleet.py  deploy_validator.sh  generate_ed25519_hotkey.py  lium_protected.py  lium_switch_to_dind.py  monitor_full.sh  monitor_loop.py  prepare_fineweb_tokens.py  probe_network.py  register_miners.sh  run_orchestrator.sh  setup_cloudflare_dashboard.py  strip_remote_runid.py  validator_weight_watchdog.py
tests/: conftest.py  test_audit_jobs.py  test_cli.py  test_crypto.py  test_executor.py  test_grants.py  test_job_index.py  test_lifecycle.py  test_miner_validator.py  test_protocol.py  test_queue.py  test_round_orchestration.py  test_streaming.py  test_stress_mode.py  test_v2_preservation.py
teuton_core/: __init__.py  cli.py  cli_jobs.py  cli_views.py  compat.py  dashboard_backend.py  discovery_ui.py  ir.py  job_index.py  metagraph.py  paths.py  protocol.py  signatures.py  telemetry.py  visualizer.py  wallet_crypto.py
teuton_dashboard/: pyproject.toml
teuton_dashboard/src/teuton_dashboard/: __init__.py  app.py  bucket_factory.py  db.py  main.py  models.py  queue_bus.py  settings.py
teuton_dashboard/src/teuton_dashboard/api/: __init__.py  chain.py  deps.py  discovery.py  health.py  jobs.py  queue.py  snapshot.py
teuton_dashboard/src/teuton_dashboard/indexers/: __init__.py  bucket.py  chain.py  queue_sampler.py
teuton_dashboard/tests/: conftest.py  test_api_health.py  test_api_queue_stream.py  test_api_snapshot.py  test_indexers.py  test_queue_bus.py
teuton_legacy_v2/: __init__.py  config.py  eval.py  ir.py  main.py  orchestrator.py  schedule.py  streaming.py  tensor_io.py  types.py  validator.py  worker.py
teuton_miner/: __init__.py  capabilities.py  neuron.py  worker.py
teuton_orchestrator/: __init__.py  legacy_round.py  run_manager.py  scheduler.py  streaming.py  streaming_telemetry.py
teuton_runtime/: __init__.py  crypto.py  discovery.py  distributed_executor.py  distributed_gpt.py  eval.py  executor.py  grants.py  lifecycle.py  queue.py  (+4 more)
(+96 files in other folders)
