[project]
name = "teuton-v3"
version = "0.3.0"
description = "Teuton v3: subnet-ready bucket-native distributed training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
subnet = [
    "bittensor>=9.0",
    "bittensor-cli>=9.0",
    "bittensor-drand>=1.3",
    "bittensor-wallet @ git+https://github.com/latent-to/btwallet.git@feat/roman/add-ed25519-support",
    "pynacl>=1.5",
]
lium = ["lium.io>=0.0.15"]
data = ["datasets>=2.18", "tiktoken>=0.7"]
test = ["pytest>=8.0"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "teuton_core",
    "teuton_runtime",
    "teuton_runtime.data",
    "teuton_orchestrator",
    "teuton_miner",
    "teuton_validator",
    "teuton_tasks",
    "teuton_legacy_v2",
    "teuton_legacy_v2.tasks",
    "teuton_legacy_v2.data",
    "bench",
    "scripts",
]

[project.scripts]
teuton-v3 = "teuton_core.cli:main"
teuton-v2-legacy = "teuton_legacy_v2.main:main"
teuton-generate-ed25519-hotkey = "scripts.generate_ed25519_hotkey:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "s3: requires TEUTON_TEST_S3=1 and bucket credentials",
    "lium: requires TEUTON_TEST_LIUM=1 and LIUM_API_KEY",
    "subnet: requires TEUTON_TEST_SUBNET=1 and Bittensor wallet config",
    "dataset: requires optional dataset/tokenizer dependencies",
    "drand: requires TEUTON_TEST_DRAND=1, network access, and bittensor-drand",
]
