[project]
name = "teuton-dashboard"
version = "0.1.0"
description = "Teuton queue-native operator dashboard (FastAPI + SSE)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.6",
    "pydantic-settings>=2.4",
    "aiosqlite>=0.20",
    "anyio>=4.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
chain = [
    # The chain indexer pulls metagraph state. Optional so the image can
    # exclude bittensor in tests / local dev.
    "bittensor>=9.0",
]

[project.scripts]
teuton-dashboard = "teuton_dashboard.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
